# ModelPredictiveControl

./: CMakeLists.txt  README.md  debug_and_run.sh  release_and_run.sh  test_and_run.sh
apps/: CMakeLists.txt  app.cpp
include/IO/: stream.hpp
include/controllers/: linear_quadratic_regulator.hpp  model_predictive_control.hpp
include/models/: mass_spring_damper.hpp  model_predictive_control.hpp
src/: CMakeLists.txt  linear_quadratic_regulator.cc  mass_spring_damper.cc  model_predictive_control.cc  stream.cc
tests/: CMakeLists.txt  models_testlib.cc
